updated file mngt

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,17 @@
 notes.cpp
+iceman.txt
 
-Vector.cpp
+/Users/jonathansamuels/CS30/Iceman/IceMan-skeleton-windows/Iceman/debug
+/Users/jonathansamuels/CS30/Iceman/IceMan-skeleton-windows/Iceman/irrKlang
+/Users/jonathansamuels/CS30/Iceman/IceMan-skeleton-windows/Iceman/Assets
 
-
+                     
+IceMan.vcxproj          
+irrKlang.lib
+GameWorld.h           
+GameWorld.cpp           
+IceMan.vcxproj.user     
+freeglut.lib            
+main.cpp
+Assets                         
+irrKlang
